--- a/day_23/exercise_loops.ipynb
+++ b/day_23/exercise_loops.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1598250011037",
+   "name": "python_defaultSpec_1598374389714",
    "display_name": "Python 3.8.5 32-bit"
   }
  },
@@ -175,6 +175,456 @@
     "    for j in range(1, i + 1):\n",
     "        print(i, end = \" \")\n",
     "    print(' ')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr>**4.** Use nested loops to create the following:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "########\n########\n########\n########\n########\n########\n########\n########\n"
+    }
+   ],
+   "source": [
+    "for i in range(1, 9):\n",
+    "    print(\"#\" * 8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr>**5.** Print the following pattern:<br>\n",
+    "0 x 0 = 0 <br>\n",
+    "1 x 1 = 1 <br>\n",
+    "2 x 2 = 4 <br>\n",
+    "3 x 3 = 9 <br>\n",
+    "4 x 4 = 16 <br>\n",
+    "5 x 5 = 25 <br>\n",
+    "6 x 6 = 36 <br>\n",
+    "7 x 7 = 49 <br>\n",
+    "8 x 8 = 64 <br>\n",
+    "9 x 9 = 81 <br>\n",
+    "10 x 10 = 100\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "0 * 0 = 0\n1 * 1 = 1\n2 * 2 = 4\n3 * 3 = 9\n4 * 4 = 16\n5 * 5 = 25\n6 * 6 = 36\n7 * 7 = 49\n8 * 8 = 64\n9 * 9 = 81\n10 * 10 = 100\n"
+    }
+   ],
+   "source": [
+    "for i in range(0, 11):\n",
+    "    print(f\"{i} * {i} = {i * i}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr> **6.** Iterate through the list, ['Python', 'Numpy','Pandas','Django', 'Flask'] using a for loop and print out the items."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Python\nNumpy\nPandas\nDjango\nFlask\n"
+    }
+   ],
+   "source": [
+    "python_libraries = ['Python', 'Numpy','Pandas','Django', 'Flask']\n",
+    "for library in python_libraries:\n",
+    "    print(library)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr>**7** Use for loop to iterate from 0 to 100 and print only even numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "0\n2\n4\n6\n8\n10\n12\n14\n16\n18\n20\n22\n24\n26\n28\n30\n32\n34\n36\n38\n40\n42\n44\n46\n48\n50\n52\n54\n56\n58\n60\n62\n64\n66\n68\n70\n72\n74\n76\n78\n80\n82\n84\n86\n88\n90\n92\n94\n96\n98\n100\n"
+    }
+   ],
+   "source": [
+    "for i in range(0, 101):\n",
+    "    if i % 2 == 0:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr> **8.** Use for loop to iterate from 0 to 100 and print only odd numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "1\n3\n5\n7\n9\n11\n13\n15\n17\n19\n21\n23\n25\n27\n29\n31\n33\n35\n37\n39\n41\n43\n45\n47\n49\n51\n53\n55\n57\n59\n61\n63\n65\n67\n69\n71\n73\n75\n77\n79\n81\n83\n85\n87\n89\n91\n93\n95\n97\n99\n"
+    }
+   ],
+   "source": [
+    "for i in range(0, 101):\n",
+    "    if not i % 2 == 0:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ",hr> **9.** Use for loop to iterate from 0 to 100 and print the sum of all numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "The sum of all numbers from 0 to 100 is 5050\n"
+    }
+   ],
+   "source": [
+    "total = 0\n",
+    "for num in range(0, 101):\n",
+    "    total = total + num\n",
+    "    num = num + 1\n",
+    "print(f\"The sum of all numbers from 0 to 100 is {total}.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr> **10.** Use for loop to iterate from 0 to 100 and print the sum of all evens and the sum of all odds."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "The sum of all evens is 2550. and the sum of all odds is 2500.\n"
+    }
+   ],
+   "source": [
+    "even_total = 0\n",
+    "odd_total = 0\n",
+    "for i in range(0, 101):\n",
+    "    if i % 2 == 0:\n",
+    "        even_total = even_total + i\n",
+    "        i = i + 1\n",
+    "    elif i % 2 != 0:\n",
+    "        odd_total = odd_total + i\n",
+    "        i = i + 1\n",
+    "print(f\"The sum of all evens is {even_total}. and the sum of all odds is {odd_total}.\")    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr> **11.** Go to the data folder and use the countries.py file. Loop through the countries and extract all the countries containing the word land."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Finland\nIceland\nIreland\nMarshall Island\nNetherland\nNew Zealand\nPoland\nSolomon Island\nSwaziland\nSwitzerland\nThailand\n"
+    }
+   ],
+   "source": [
+    "countries = [\n",
+    "  'Afghanistan',\n",
+    "  'Albania',\n",
+    "  'Algeria',\n",
+    "  'Andorra',\n",
+    "  'Angola',\n",
+    "  'Antigua and Barbuda',\n",
+    "  'Argentina',\n",
+    "  'Armenia',\n",
+    "  'Australia',\n",
+    "  'Austria',\n",
+    "  'Azerbaijan',\n",
+    "  'Bahamas',\n",
+    "  'Bahrain',\n",
+    "  'Bangladesh',\n",
+    "  'Barbados',\n",
+    "  'Belarus',\n",
+    "  'Belgium',\n",
+    "  'Belize',\n",
+    "  'Benin',\n",
+    "  'Bhutan',\n",
+    "  'Bolivia',\n",
+    "  'Bosnia and Herzegovina',\n",
+    "  'Botswana',\n",
+    "  'Brazil',\n",
+    "  'Brunei',\n",
+    "  'Bulgaria',\n",
+    "  'Burkina Faso',\n",
+    "  'Burundi',\n",
+    "  'Cambodia',\n",
+    "  'Cameroon',\n",
+    "  'Canada',\n",
+    "  'Cape Verde',\n",
+    "  'Central African Republic',\n",
+    "  'Chad',\n",
+    "  'Chile',\n",
+    "  'China',\n",
+    "  'Colombi',\n",
+    "  'Comoros',\n",
+    "  'Congo (Brazzaville)',\n",
+    "  'Congo',\n",
+    "  'Costa Rica',\n",
+    "  \"Cote d'Ivoire\",\n",
+    "  'Croatia',\n",
+    "  'Cuba',\n",
+    "  'Cyprus',\n",
+    "  'Czech Republic',\n",
+    "  'Denmark',\n",
+    "  'Djibouti',\n",
+    "  'Dominica',\n",
+    "  'Dominican Republic',\n",
+    "  'East Timor (Timor Timur)',\n",
+    "  'Ecuador',\n",
+    "  'Egypt',\n",
+    "  'El Salvador',\n",
+    "  'Equatorial Guinea',\n",
+    "  'Eritrea',\n",
+    "  'Estonia',\n",
+    "  'Ethiopia',\n",
+    "  'Fiji',\n",
+    "  'Finland',\n",
+    "  'France',\n",
+    "  'Gabon',\n",
+    "  'Gambia, The',\n",
+    "  'Georgia',\n",
+    "  'Germany',\n",
+    "  'Ghana',\n",
+    "  'Greece',\n",
+    "  'Grenada',\n",
+    "  'Guatemala',\n",
+    "  'Guinea',\n",
+    "  'Guinea-Bissau',\n",
+    "  'Guyana',\n",
+    "  'Haiti',\n",
+    "  'Honduras',\n",
+    "  'Hungary',\n",
+    "  'Iceland',\n",
+    "  'India',\n",
+    "  'Indonesia',\n",
+    "  'Iran',\n",
+    "  'Iraq',\n",
+    "  'Ireland',\n",
+    "  'Israel',\n",
+    "  'Italy',\n",
+    "  'Jamaica',\n",
+    "  'Japan',\n",
+    "  'Jordan',\n",
+    "  'Kazakhstan',\n",
+    "  'Kenya',\n",
+    "  'Kiribati',\n",
+    "  'Korea, North',\n",
+    "  'Korea, South',\n",
+    "  'Kuwait',\n",
+    "  'Kyrgyzstan',\n",
+    "  'Laos',\n",
+    "  'Latvia',\n",
+    "  'Lebanon',\n",
+    "  'Lesotho',\n",
+    "  'Liberia',\n",
+    "  'Libya',\n",
+    "  'Liechtenstein',\n",
+    "  'Lithuania',\n",
+    "  'Luxembourg',\n",
+    "  'Macedonia',\n",
+    "  'Madagascar',\n",
+    "  'Malawi',\n",
+    "  'Malaysia',\n",
+    "  'Maldives',\n",
+    "  'Mali',\n",
+    "  'Malta',\n",
+    "  'Marshall Islands',\n",
+    "  'Mauritania',\n",
+    "  'Mauritius',\n",
+    "  'Mexico',\n",
+    "  'Micronesia',\n",
+    "  'Moldova',\n",
+    "  'Monaco',\n",
+    "  'Mongolia',\n",
+    "  'Morocco',\n",
+    "  'Mozambique',\n",
+    "  'Myanmar',\n",
+    "  'Namibia',\n",
+    "  'Nauru',\n",
+    "  'Nepal',\n",
+    "  'Netherlands',\n",
+    "  'New Zealand',\n",
+    "  'Nicaragua',\n",
+    "  'Niger',\n",
+    "  'Nigeria',\n",
+    "  'Norway',\n",
+    "  'Oman',\n",
+    "  'Pakistan',\n",
+    "  'Palau',\n",
+    "  'Panama',\n",
+    "  'Papua New Guinea',\n",
+    "  'Paraguay',\n",
+    "  'Peru',\n",
+    "  'Philippines',\n",
+    "  'Poland',\n",
+    "  'Portugal',\n",
+    "  'Qatar',\n",
+    "  'Romania',\n",
+    "  'Russia',\n",
+    "  'Rwanda',\n",
+    "  'Saint Kitts and Nevis',\n",
+    "  'Saint Lucia',\n",
+    "  'Saint Vincent',\n",
+    "  'Samoa',\n",
+    "  'San Marino',\n",
+    "  'Sao Tome and Principe',\n",
+    "  'Saudi Arabia',\n",
+    "  'Senegal',\n",
+    "  'Serbia and Montenegro',\n",
+    "  'Seychelles',\n",
+    "  'Sierra Leone',\n",
+    "  'Singapore',\n",
+    "  'Slovakia',\n",
+    "  'Slovenia',\n",
+    "  'Solomon Islands',\n",
+    "  'Somalia',\n",
+    "  'South Africa',\n",
+    "  'Spain',\n",
+    "  'Sri Lanka',\n",
+    "  'Sudan',\n",
+    "  'Suriname',\n",
+    "  'Swaziland',\n",
+    "  'Sweden',\n",
+    "  'Switzerland',\n",
+    "  'Syria',\n",
+    "  'Taiwan',\n",
+    "  'Tajikistan',\n",
+    "  'Tanzania',\n",
+    "  'Thailand',\n",
+    "  'Togo',\n",
+    "  'Tonga',\n",
+    "  'Trinidad and Tobago',\n",
+    "  'Tunisia',\n",
+    "  'Turkey',\n",
+    "  'Turkmenistan',\n",
+    "  'Tuvalu',\n",
+    "  'Uganda',\n",
+    "  'Ukraine',\n",
+    "  'United Arab Emirates',\n",
+    "  'United Kingdom',\n",
+    "  'United States',\n",
+    "  'Uruguay',\n",
+    "  'Uzbekistan',\n",
+    "  'Vanuatu',\n",
+    "  'Vatican City',\n",
+    "  'Venezuela',\n",
+    "  'Vietnam',\n",
+    "  'Yemen',\n",
+    "  'Zambia',\n",
+    "  'Zimbabwe',\n",
+    "]\n",
+    "\n",
+    "for country_land in countries:\n",
+    "    index = country_land.find('land')\n",
+    "    if 'land' in country_land:\n",
+    "        print(f\"{country_land[0 : index]}land\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr> **12.** This is a fruit list, ['banana', 'orange', 'mango', 'lemon'] reverse the order using loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "['lemon', 'mango', 'orange', 'banana']\n"
+    }
+   ],
+   "source": [
+    "fruits = ['banana', 'orange', 'mango', 'lemon']\n",
+    "fruits.reverse()\n",
+    "print(fruits)\n",
+    "# why should I use loop when I can do it more easily by reverse method?? -_-"
    ]
   },
   {
