--- a/day_22/input_and_while_loops.ipynb
+++ b/day_22/input_and_while_loops.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1598075668261",
+   "name": "python_defaultSpec_1598538372792",
    "display_name": "Python 3.8.5 32-bit"
   }
  },
@@ -287,6 +287,109 @@
     "while x <= 5:\n",
     "    print(x)\n",
     "    x += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr><u>confirmed users:</u>\n",
+    "Start with users that need to be verified, and an empty list to hold confirmed users."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Verifying user: Candace\nVerifying user: Brian\nVerifying user: Alice\n\nThe following users have been confirmed:\ncandace\nbrian\nalice\n"
+    }
+   ],
+   "source": [
+    "unconfirmed_users = ['alice', 'brian', 'candace']\n",
+    "confirmed_users = []\n",
+    "'''Verify each user until there are no more unconfirmed users. Move each verified user into the list of confirmed users.'''\n",
+    "while unconfirmed_users:\n",
+    "    current_user = unconfirmed_users.pop()\n",
+    "    print(\"Verifying user: \" + current_user.title())\n",
+    "    confirmed_users.append(current_user)\n",
+    "\n",
+    "# diplaying all confirmed users:\n",
+    "print(\"\\nThe following users have been confirmed:\")\n",
+    "for confirmed_user in confirmed_users:\n",
+    "    print(confirmed_user)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr> **Removing all instances of specific values from a list:**  \n",
+    "We use remove() to remove an item from a list. But if the item appears several times, we will have to use while loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "['cat', 'dog', 'cat', 'rabbit', 'cat', 'goldfish']\n['dog', 'rabbit', 'goldfish']\n"
+    }
+   ],
+   "source": [
+    "pets = ['cat', 'dog', 'cat', 'rabbit', 'cat', 'goldfish']\n",
+    "print(pets)\n",
+    "while 'cat' in pets:\n",
+    "    pets.remove('cat')\n",
+    "    \n",
+    "print(pets)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr>**Filling a Dictionary with User Input:**\n",
+    "Let’s make a polling program in which each pass through the loop prompts for the participant’s name and response. We’ll store the data we gather in a dictionary, because we want to connect each response with a particular user:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "\n---Poll Results---\nAyesha would you like to climb Averest.\nFatima would you like to climb Vesuvius.\n"
+    }
+   ],
+   "source": [
+    "responses = {}\n",
+    "# set a flag to indicate that polling is active.\n",
+    "polling_active = True\n",
+    "while polling_active:\n",
+    "    name = input('\\nWhat is your name?')\n",
+    "    response = input(\"Which mountain would you like to climb someday? \")\n",
+    "    responses[name] = response  # storing the response in the dictionary.\n",
+    "    repeat = input(\"Would you like to let another person respond? (yes/ no) \")\n",
+    "    if repeat == 'no':\n",
+    "        polling_active = False\n",
+    "print('\\n---Poll Results---')\n",
+    "for name, response in responses.items():\n",
+    "    print(name + ' would you like to climb ' + response + '.')"
    ]
   }
  ]
