--- a/day_23/exercises_on_loops.ipynb
+++ b/day_23/exercises_on_loops.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1598106739805",
+   "name": "python_defaultSpec_1598538372793",
    "display_name": "Python 3.8.5 32-bit"
   }
  },
@@ -113,11 +113,102 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<hr> **7-8. Deli:** Make a list called sandwich_orders and fill it with the names of various sandwiches. Then make an empty list called finished_sandwiches . Loop through the list of sandwich orders and print a message for each order, such as I made your tuna sandwich. As each sandwich is made, move it to the list of finished sandwiches. After all the sandwiches have been made, print a message listing each sandwich that was made."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "I made your egg sandwich.\nI made your beef sandwich.\nI made your chicken sandwich.\nI made your tuna sandwich.\n\nThe following sandwiched have veen made:\n   Egg sandwich\n   Beef sandwich\n   Chicken sandwich\n   Tuna sandwich\n"
+    }
+   ],
+   "source": [
+    "sandwich_orders =['tuna', 'chicken', 'beef', 'egg']\n",
+    "finished_sandwiches = []\n",
+    "while sandwich_orders:\n",
+    "    current_sandwich = sandwich_orders.pop()\n",
+    "    print(f\"I made your {current_sandwich} sandwich.\")\n",
+    "    finished_sandwiches.append(current_sandwich)\n",
+    "\n",
+    "print(f\"\\nThe following sandwiched have veen made:\")\n",
+    "for sandwich in finished_sandwiches:\n",
+    "    print('  ', sandwich.title(), 'sandwich')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr>**7-9. No Pastrami:** Using the list sandwich_orders from Exercise 7-8 , make sure the sandwich 'pastrami' appears in the list at least three times. Add code near the beginning of your program to print a message saying the deli has run out of pastrami, and then use a while loop to remove all occurrences of 'pastrami' from sandwich_orders. Make sure no pastrami sandwiches end up in finished_sandwiches."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "The restaurant has run out of pastrami.\n['tuna', 'chicken', 'beef', 'egg']\n"
+    }
+   ],
+   "source": [
+    "sandwich_orders = ['pastrami', 'tuna', 'chicken', 'pastrami', 'beef', 'egg', 'pastrami']\n",
+    "print(\"The restaurant has run out of pastrami.\")\n",
+    "while 'pastrami' in sandwich_orders:\n",
+    "    if 'pastrami' in sandwich_orders:\n",
+    "        sandwich_orders.remove('pastrami')\n",
+    "\n",
+    "print(sandwich_orders)   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr>**7-10. Dream Vacation:** Write a program that polls users about their dream vacation. Write a prompt similar to If you could visit one place in the world, where would you go? Include a block of code that prints the results of the poll."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Poll Results: \nAbdullah's dream vacation place is in Makkah.\nArsh's dream vacation place is in Madina.\n"
+    }
+   ],
+   "source": [
+    "poll = {}\n",
+    "polling_active = True\n",
+    "while polling_active:\n",
+    "    name = input('\\nWhat is your name? ')\n",
+    "    place = input(\"Which place in the world would you like to visit? \")\n",
+    "    poll[name] = place\n",
+    "    repeat = input(\"Would you like to let another person respond? (yes/ no) \")\n",
+    "    if repeat == 'no':\n",
+    "        polling_active = False\n",
+    "print('Poll Results: ')\n",
+    "for name, place in poll.items():\n",
+    "    print(f\"{name}'s dream vacation place is in {place}.\")"
+   ]
   }
  ]
 }
