--- a/day_23/exercise_loops.ipynb
+++ b/day_23/exercise_loops.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1598374389714",
+   "name": "python_defaultSpec_1598628355616",
    "display_name": "Python 3.8.5 32-bit"
   }
  },
@@ -625,6 +625,64 @@
     "fruits.reverse()\n",
     "print(fruits)\n",
     "# why should I use loop when I can do it more easily by reverse method?? -_-"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "['guava', 'mango', 'orange', 'banana', 'apple']\n"
+    }
+   ],
+   "source": [
+    "fruits = ['apple', 'banana', 'orange', 'mango', 'guava']\n",
+    "for fruit in fruits:\n",
+    "    fruits.reverse()\n",
+    "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "['Rima', 'Fahima', 'Ayesha', 'Khadeeja']\n"
+    }
+   ],
+   "source": [
+    "lst = ['Khadeeja','Ayesha','Fahima', 'Rima']\n",
+    "lst.reverse()\n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "['d', 'f', 'm', 'o', 'k']\n"
+    }
+   ],
+   "source": [
+    "letter = ['k', 'o', 'm', 'f', 'd']\n",
+    "letter.reverse()\n",
+    "print(letter)"
    ]
   },
   {
